test race VC load

--- a/DungeonsDragonsCC/Base.lproj/Main.storyboard
+++ b/DungeonsDragonsCC/Base.lproj/Main.storyboard
@@ -512,7 +512,7 @@
         <!--Create Character Race View Controller-->
         <scene sceneID="scU-kv-pbx">
             <objects>
-                <tableViewController id="kEW-Rt-dc2" customClass="CreateCharacterRaceViewController" customModule="DungeonsDragonsCC" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="CreateCharacterRaceViewController" id="kEW-Rt-dc2" customClass="CreateCharacterRaceViewController" customModule="DungeonsDragonsCC" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="eEs-yj-fHf">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
